WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122770
window.crypto doesn't preserve custom properties
https://bugs.webkit.org/show_bug.cgi?id=122770
Summary
window.crypto doesn't preserve custom properties
Alexey Proskuryakov
Reported
2013-10-14 12:05:28 PDT
GC doesn't preserve Crypto wrapper even when it's observable.
Attachments
proposed fix
(6.69 KB, patch)
2013-10-14 12:26 PDT
,
Alexey Proskuryakov
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-10-14 12:26:19 PDT
Created
attachment 214179
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-10-14 12:28:22 PDT
Attachment 214179
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/security/crypto-gc-expected.txt', u'LayoutTests/security/crypto-gc.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/page/Crypto.cpp', u'Source/WebCore/page/Crypto.h', u'Source/WebCore/page/Crypto.idl', u'Source/WebCore/page/DOMWindow.cpp']" exit_code: 1 Source/WebCore/page/Crypto.h:57: The parameter name "document" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Hahnenberg
Comment 3
2013-10-14 12:31:57 PDT
Comment on
attachment 214179
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 4
2013-10-14 13:27:28 PDT
Committed
r157417
.
Geoffrey Garen
Comment 5
2013-10-14 20:13:17 PDT
Comment on
attachment 214179
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=214179&action=review
> Source/WebCore/page/DOMWindow.cpp:596 > + // FIXME: Why is crypto not available when the window is not currently displayed in a frame? > if (!isCurrentlyDisplayedInFrame()) > return 0;
Shenanigans!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug